--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>CSS3 3D转换</title>
+	<title>我的网站</title>
 	<style>
 		body {
 			margin: 0;
@@ -53,37 +53,12 @@
       transform: rotateX(-90deg);
     }
 
-
-
-		/*li span {*/
-			/*display: block;*/
-			/*width: 100%;*/
-			/*height: 100%;*/
-			/*position: absolute;*/
-			/*left: 0;*/
-			/*top: 0;*/
-		/*}*/
-
-		/*li span:nth-child(1) {*/
-			/*background-color: yellow;*/
-			/*transform: rotateX(90deg) translateZ(20px);*/
-		/*}*/
-
-		/*li span:nth-child(2) {*/
-			/*background-color: green;*/
-			/*transform: translateZ(20px);*/
-		/*}*/
-
-		/*li:hover {*/
-			/*transform: rotateX(-90deg);*/
-		/*}*/
-
 	</style>
 </head>
 <body>
 	<ul class="nav">
 		<li>
-			<span>传智播客</span>
+			<span>第一天</span>
 			<span>Web前端</span>
 		</li>
 		<li>
