--- a/index.html
+++ b/index.html
@@ -58,24 +58,24 @@
 <body>
 	<ul class="nav">
 		<li>
+			<span>微笑</span>
 			<span>第一天</span>
-			<span>Web前端</span>
 		</li>
 		<li>
-			<span>传智播客</span>
-			<span>Web前端</span>
+			<span>冷笑</span>
+			<span>第二天</span>
 		</li>
 		<li>
-			<span>传智播客</span>
-			<span>Web前端</span>
+			<span>狂笑</span>
+			<span>第三天</span>
 		</li>
 		<li>
-			<span>传智播客</span>
-			<span>Web前端</span>
+			<span>得意笑</span>
+			<span>第四天</span>
 		</li>
 		<li>
-			<span>传智播客</span>
-			<span>Web前端</span>
+			<span>苦笑</span>
+			<span>第五天</span>
 		</li>
 	</ul>
 </body>
