--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     }
 
     .all ol li.current {
-      background: #DB192A;
+      background: pink;
     }
 
     #arr {
@@ -106,7 +106,7 @@
 			list-style: none;
 		}
 
-		li {
+		.nav li {
 			width: 140px;
 			height: 40px;
 			text-align: center;
@@ -120,7 +120,7 @@
       transition: all 1s linear;
 		}
 
-    li span{
+    .nav li span{
       /*display: block;*/
       position: absolute;
       left:0;
@@ -129,15 +129,15 @@
       height: 100%;;
 
     }
-    li span:nth-child(1){
+    .nav li span:nth-child(1){
       background-color:yellow;
       transform: rotateX(90deg) translateZ(20px );
     }
-    li span:nth-child(2){
+    .nav li span:nth-child(2){
       background-color:green;
       transform: translateZ(20px);
     }
-    li:hover {
+    .nav li:hover {
       transform: rotateX(-90deg);
     }
 
@@ -241,7 +241,7 @@
   ulObj.appendChild(ulObj.children[0].cloneNode(true));
 
   //页面加载后需要图片自动的移动
-  var timeId=setInterval(f1, 1000);
+  var timeId=setInterval(f1, 2000);
 
   //鼠标进入
   box.onmouseover = function () {
@@ -290,5 +290,5 @@
     //设置对应的按钮的类样式
     olObj.children[pic].className = "current";
   };
-
+	</script>
 </html>
